--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-svg": "^14.0.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
