--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "expo-status-bar": "~1.6.0",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-svg": "^14.0.0",
+    "react-native-svg": "13.9.0",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
